--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -266,3 +266,9 @@
         
     }
 }
+
+@media (min-width: 1024px) {
+    .hide-on-pc {
+        display: none;
+    }
+}
